poems padding on mobile fixed

--- a/css/home.css
+++ b/css/home.css
@@ -54,8 +54,8 @@
         margin: -10vw auto 0 auto;
     }
 
-    .more-link {
-        margin: 0 5% 2rem 5%;
+    .more-link__text {
+        font-size: 3.6vw;
     }
 }
 
@@ -93,7 +93,7 @@
     display: block;
     text-align: center;
     padding: 20px 0;
-    margin: 0 30% 2rem 30%;
+    margin: 0 25% 2rem 25%;
 }
 
 .more-link:hover {
